src/tests/snapshots/niri__tests__window_opening__check_target_size@dwU-dhP0.5-b.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    default-column-width {  }\n    default-window-height { proportion 0.5; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 0 × 328, bounds: 1240 × 680, states: []

post-map configures:
size: 1 × 328, bounds: 1240 × 680, states: [Activated]
