src/tests/snapshots/niri__tests__window_opening__check_target_size@dwU-dhP0.5-t.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    default-column-width {  }\n    default-window-height { proportion 0.5; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 0 × 336, bounds: 1239 × 688, states: []

post-map configures:
size: 1 × 336, bounds: 1239 × 688, states: [Activated]
